// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Button default 1`] = `
<button
  className="a-button"
>
  <span>
    default
  </span>
</button>
`;

exports[`Storyshots Atoms/Button default disable 1`] = `
<button
  className="a-button"
  disabled={true}
>
  <span>
    default disable
  </span>
</button>
`;

exports[`Storyshots Atoms/Button primary 1`] = `
<button
  className="a-button a-button-primary"
>
  <span>
    primary
  </span>
</button>
`;

exports[`Storyshots Atoms/Button primary disable 1`] = `
<button
  className="a-button a-button-primary"
  disabled={true}
>
  <span>
    primary disable
  </span>
</button>
`;

exports[`Storyshots Atoms/Button secondary 1`] = `
<button
  className="a-button a-button-secondary"
>
  <span>
    secondary
  </span>
</button>
`;

exports[`Storyshots Atoms/Button secondary disable 1`] = `
<button
  className="a-button a-button-secondary"
  disabled={true}
>
  <span>
    secondary disable
  </span>
</button>
`;

exports[`Storyshots Atoms/Checkbox default 1`] = `
<label>
  <input
    type="checkbox"
  />
</label>
`;
